logo design fix & articles gap reduce

--- a/components/Articles/_articles.scss
+++ b/components/Articles/_articles.scss
@@ -35,7 +35,6 @@
     }
     @media screen and (max-width: 900px) {
       grid-template-columns: 1fr 5px 1fr;
-      gap: 50px 15px;
     }
     @media screen and (max-width: 800px) {
       grid-template-columns: 1fr;
